Fixed alignment of images in index

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -89,17 +89,20 @@ textarea {
   width: 80%;
 }
 
-.glaphicon {
+.section {
+  background-color: white;
+  height: 400px;
+  text-align: center;
+}
+
+.section img {
   width: 142px;
   height: 142px;
+  display: block;
   margin-left: auto;
   margin-right: auto;
 }
 
-.glaphicon img {
-  width: 100%;
-  height: auto;
-}
 
 .hero-image {
   height: 510px;
@@ -123,18 +126,6 @@ textarea {
   margin-right: 210px;
 }
 
-.section {
-  background-color: white;
-  height: 400px;
-}
-
-.section h2 {
-  padding-left: 20%;
-}
-
-.section p{
-  padding-left: 20%;
-}
 
 .about {
   height: 443px;
@@ -189,8 +180,6 @@ textarea {
 }
 
 // Tables
-
-
 
 // Helper classes
 
